tests/baselines/reference/internalAliasEnumInsideLocalModuleWithExport.errors.txt
internalAliasEnumInsideLocalModuleWithExport.ts(1,8): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
internalAliasEnumInsideLocalModuleWithExport.ts(9,8): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== internalAliasEnumInsideLocalModuleWithExport.ts (2 errors) ====
    export module a {
           ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export enum weekend {
            Friday,
            Saturday,
            Sunday
        }
    }
    
    export module c {
           ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export import b = a.weekend;
        export var bVal: b = b.Sunday;
    }
    